# django-project-preparation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/blog/: apps.py  forms.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/blog/static/css/: blog.css
apps/blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_draft_list.html  post_form.html  post_list.html
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
